refactor: better route handling via SimulationKernel
Signed-off-by: Karl Schrab <karl.schrab@fokus.fraunhofer.de>